2007-12-01  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-keyserv.scm, src/kahua-server.scm
	  Flush explicitly stdout when they tell their worker-id to
	  kahua-spvr, because of change in Gauche CVS HEAD
	  (src/port.c r1.147).

2007-11-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/elem.scm
	  Lack of sup/, sup:, big/ and big:(exported but not exist).

2007-10-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.7.1 released.

	* Change: skel/configure.ac
	  Update messages about Gauche and Kahua version.

2007-10-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: skel/Makefile.in
	  Fix a bug that generated application installation
	  was fail.

2007-09-21  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.7 released.

2007-09-07  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm
	  Drop extra escape on stack dump in the default error handler.
	  Fix unexpected error when parameter kahua-default-error-handler
	  is not set explicitly.

2007-08-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: emacs/kahua.el.in
	  Fix the problem with default value of site bundle on Emacs 21.

2007-08-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/xml-template.scm
	  Procedure xml-template->sxml now can take '() or #f as
	  replacing element and they are handled as empty node.

2007-08-17  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-httpd.scm, src/kahua/server.scm
	  Content-type of .xml document, rss node and xml node
	  is now application/xml instead of text/xml.

2007-08-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/protocol/worker.scm, src/kahua/protocol/http.scm,
	          src/kahua/server.scm, test/server.scm, cgi/kahua.cgi.in
	  Now cookie handling fit RFC2965 more.

	* Change: src/kahua/config.scm.in
	  Configurable item "session-domain" added.  It can have :site,
	  :bridge, :worker or session range URI or path(string). Default
	  value is :site.

2007-08-13  Tatsuya BIZENN  <bizenn@arthub.net>
